// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Welcome should render 1`] = `
<DocumentFragment>
  <div
    class="w-full h-full"
  >
    <div
      class="px-4 sm:px-6 lg:px-8"
    >
      <div
        class="flex items-center flex-shrink-0 h-20 md:h-24"
      >
        <div
          class="flex p-2 rounded-lg bg-logo"
        >
          <img
            alt="ARK Logo"
            class="h-6 md:h-8 lg:h-10"
            src="ark-logo.png"
          />
        </div>
      </div>
    </div>
    <div
      class="container px-4 mx-auto text-center sm:px-6 lg:px-0"
    >
      <h1
        class="mb-8 font-bold"
      >
        Welcome to ARK
      </h1>
      <div
        class="w-full mx-auto lg:w-4/5 xl:w-2/3"
      >
        <svg>
          welcome-banner.svg
        </svg>
      </div>
      <div
        class="max-w-lg mx-auto my-8 md:max-w-xl"
      >
        <p
          class="mb-4 text-sm text-theme-neutral-dark md:text-base"
        >
          Create a new Profile or login with your MarketSquare account to get started
        </p>
        <div
          class="flex flex-col md:space-x-3 md:flex-row"
        >
          <button
            class="sc-AxjAm ddQVWI w-full"
            color="primary"
            type="button"
          >
            <div
              class="sc-AxiKw dklFyP"
              height="20"
              width="20"
            >
              <svg>
                msq.svg
              </svg>
            </div>
            <span
              class="ml-2"
            >
              Sign in to MarketSquare
            </span>
          </button>
          <button
            class="sc-AxjAm ddJBbC w-full mt-2 md:mt-0"
            color="primary"
            type="button"
          >
            Create Profile
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Welcome should render with profiles 1`] = `
<DocumentFragment>
  <div
    class="w-full h-full"
  >
    <div
      class="px-4 sm:px-6 lg:px-8"
    >
      <div
        class="flex items-center flex-shrink-0 h-20 md:h-24"
      >
        <div
          class="flex p-2 rounded-lg bg-logo"
        >
          <img
            alt="ARK Logo"
            class="h-6 md:h-8 lg:h-10"
            src="ark-logo.png"
          />
        </div>
      </div>
    </div>
    <div
      class="container px-4 mx-auto text-center sm:px-6 lg:px-0"
    >
      <h1
        class="mb-8 font-bold"
      >
        Welcome to ARK
      </h1>
      <div
        class="w-full mx-auto lg:w-4/5 xl:w-2/3"
      >
        <svg>
          welcome-banner.svg
        </svg>
      </div>
      <div
        class="max-w-lg mx-auto my-8 md:max-w-xl"
      >
        <h2
          class="mx-4 text-xl font-bold md:text-2xl"
        >
          Select Profile
        </h2>
        <p
          class="text-sm text-theme-neutral-dark md:text-base"
        >
          You already have a profile, you can choose any of them
        </p>
        <div
          class="mt-6 mb-8 space-y-3"
        >
          <div
            class="sc-AxhCb jxpqWJ"
          >
            <div
              class="relative px-6 py-4 sm:flex sm:items-center"
            >
              <div
                class="absolute top-0 right-0 flex items-center justify-center w-6 h-6 p-1 mt-3 -mt-2 -mr-4"
              >
                <div
                  class="relative"
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="float-right outline-none focus:outline-none"
                  >
                    <div
                      class="sc-AxiKw dklFyP"
                      height="20"
                      width="20"
                    >
                      <svg>
                        settings.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-row justify-between w-full"
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="block w-12 h-12 mx-auto rounded-full sm:mx-0 sm:flex-shrink-0"
                    data-testid="profile-card__user--avatar"
                  />
                  <div
                    class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-left"
                  >
                    <p
                      class="text-sm font-semibold text-theme-neutral"
                    >
                      Name
                    </p>
                    <p
                      class="font-semibold text-theme-neutral-dark"
                      data-testid="profile-card__user--name"
                    >
                      caio
                    </p>
                  </div>
                </div>
                <div
                  class="flex items-center"
                >
                  <div
                    class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-right"
                  >
                    <p
                      class="text-sm font-semibold text-theme-neutral"
                    >
                      Total Balance
                    </p>
                    <p
                      class="font-semibold text-theme-neutral-dark"
                      data-testid="profile-card__user--balance"
                    >
                      0
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sc-AxirZ jzxvZY"
          type="horizontal"
        />
        <p
          class="mb-4 text-sm text-theme-neutral-dark md:text-base"
        >
          Create a new Profile or login with your MarketSquare account to get started
        </p>
        <div
          class="flex flex-col md:space-x-3 md:flex-row"
        >
          <button
            class="sc-AxjAm ddQVWI w-full"
            color="primary"
            type="button"
          >
            <div
              class="sc-AxiKw dklFyP"
              height="20"
              width="20"
            >
              <svg>
                msq.svg
              </svg>
            </div>
            <span
              class="ml-2"
            >
              Sign in to MarketSquare
            </span>
          </button>
          <button
            class="sc-AxjAm ddJBbC w-full mt-2 md:mt-0"
            color="primary"
            type="button"
          >
            Create Profile
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
